Added endpoint to search images using custom query.
