# api/representations/image_search_request.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class ImageSearchRequest(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, custom_query=None):
+        """
+        ImageSearchRequest - a model defined in Swagger
+
+        :param custom_query: The custom_query of this ImageSearchRequest.
+        :type custom_query: str
+        """
+        self.swagger_types = {
+            'custom_query': str
+        }
+
+        self.attribute_map = {
+            'custom_query': 'custom_query'
+        }
+
+        self._custom_query = custom_query
+
+    @classmethod
+    def from_dict(cls, dikt):
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ImageSearchRequest of this ImageSearchRequest.
+        :rtype: ImageSearchRequest
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def custom_query(self):
+        """
+        Gets the custom_query of this ImageSearchRequest.
+        Search query.
+
+        :return: The custom_query of this ImageSearchRequest.
+        :rtype: str
+        """
+        return self._custom_query
+
+    @custom_query.setter
+    def custom_query(self, custom_query):
+        """
+        Sets the custom_query of this ImageSearchRequest.
+        Search query.
+
+        :param custom_query: The custom_query of this ImageSearchRequest.
+        :type custom_query: str
+        """
+
+        self._custom_query = custom_query
+
